[metadata]
name = powergrasp
version = 0.8.9
description = compress graphs with answer-set-programming
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@inria.fr
url = https://github.com/aluriak/powergrasp
license = GPL
keywords = graph, Answer Set Programming
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: ASP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    bubbletools>=0.6.1
    clyngor>=0.3.2
    networkx==2.1
    phasme==0.0.11
    pytest==3.5.0

[zest.releaser]
create-wheel = yes

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts=
    powergrasp = powergrasp.__main__:run_cli
